# psyllid

./: .gitignore  .gitmodules  .travis.yaml  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  Dockerfile-p8compute  Dockerfile.new  Dockerfile.withfpa  LICENSE  PsyllidConfig.cmake.in  README.md  index.html
.github/workflows/: build_and_publish.yaml  publish.yaml  publish.yaml.deprecated  test.yaml
applications/: CMakeLists.txt  psyllid.cc  roach_daq_1chan.cc  single_value_daq.cc
broker-in-docker/: authentications.json  docker-compose.yaml
cmake/: Psyllid.cmake
control/: CMakeLists.txt  control_access.cc  control_access.hh  daq_control.cc  daq_control.hh  daq_worker.cc  daq_worker.hh  node_binding.cc  node_binding.hh  node_builder.cc  node_builder.hh  node_config_preset.cc  node_config_preset.hh  node_manager.cc  node_manager.hh  persistent_store.cc  persistent_store.hh  request_receiver.cc  request_receiver.hh  run_server.cc  run_server.hh  server_config.cc
daq/: CMakeLists.txt  egg_writer.cc  egg_writer.hh  event_builder.cc  event_builder.hh  frequency_mask_trigger.cc  frequency_mask_trigger.hh  monarch3_wrap.cc  monarch3_wrap.hh  single_value_trigger.hh  udp_receiver.cc  udp_receiver.hh
data/: CMakeLists.txt  freq_data.cc  freq_data.hh  id_range_event.cc  id_range_event.hh  roach_packet.cc  roach_packet.hh  time_data.cc  time_data.hh  trigger_flag.hh
docker/: README.md  docker-compose-broker.yaml  docker-compose-full.yaml
documentation/: Doxyfile  Doxyfile.in  api.rst  conf.py  from_doxygen.rst  getting_started.rst  how_psyllid_works.rst  index.rst  installation.rst  node_configurations.rst  roach_packets.rst  server_api.rst  status_definitions.rst  validation_log.md  validation_log.rst
examples/: CMakeLists.txt  README.md  eb_fmt_1ch_fpa.yaml  eb_fmt_1ch_socket.yaml  fmt_1ch_fpa.yaml  fmt_1ch_socket.yaml  roach_daq_streaming_1chan.cc  str_1ch_dataprod.yaml  str_1ch_dataprod_test_gpu.yaml  str_1ch_fast_packet_acq.json  str_1ch_fpa.yaml  str_1ch_preset.json  str_1ch_socket.json  str_1ch_socket.yaml  str_1ch_socket_batch.yaml  str_1ch_socket_custom.yaml  str_3ch_fpa.yaml  trig_1ch_socket.yaml
locust_reader_build/: CMakeCache.txt
nodes/: CMakeLists.txt  butterfly_house.cc  butterfly_house.hh  egg_writer.cc  egg_writer.hh  event_builder.cc  event_builder.hh  frequency_mask_trigger.cc  monarch3_wrap.cc  monarch3_wrap.hh  roach_config.cc  roach_config.hh  single_value_trigger.cc  single_value_trigger.hh  udp_receiver.cc  udp_receiver.hh
source/: CMakeLists.txt  README.md
source/applications/: CMakeLists.txt  README.md  grab_packet.cc  psyllid.cc  roach_daq_1chan.cc  roach_daq_streaming_1chan.cc  single_value_daq.cc
source/control/: CMakeLists.txt  README.md  batch_executor.cc  batch_executor.hh  butterfly_house.cc  butterfly_house.hh  control_access.cc  control_access.hh  daq_control.cc  daq_control.hh  daq_worker.cc  daq_worker.hh  egg_writer.cc  egg_writer.hh  monarch3_wrap.cc  monarch3_wrap.hh  node_builder.cc  node_builder.hh  node_config_preset.cc  node_config_preset.hh  node_manager.cc  node_manager.hh  persistent_store.cc  request_receiver.cc  request_receiver.hh  run_server.cc  run_server.hh  server_config.cc  server_config.hh  stream_manager.cc  stream_manager.hh  stream_preset.cc  stream_preset.hh
source/daq/: CMakeLists.txt  README.md  butterfly_house.cc  butterfly_house.hh  data_producer.cc  data_producer.hh  egg3_reader.cc  egg3_reader.hh  egg_writer.cc  egg_writer.hh  event_builder.cc  event_builder.hh  frequency_mask_trigger.cc  frequency_mask_trigger.hh  frequency_transform.cc  frequency_transform.hh  gpu_test.cu  gpu_test.cuh  locust_egg_reader.cc  locust_egg_reader.hh  monarch3_wrap.cc  monarch3_wrap.hh  or.cc  or.hh  packet_processor.cc  packet_processor.hh  packet_receiver_fpa.cc  packet_receiver_fpa.hh  packet_receiver_socket.cc  packet_receiver_socket.hh  roach_config.cc  roach_config.hh  single_value_trigger.cc  single_value_trigger.hh  streaming_frequency_writer.cc  streaming_frequency_writer.hh  streaming_writer.cc  streaming_writer.hh  terminator.cc  terminator.hh  (+8 more)
source/data/: CMakeLists.txt  README.md  freq_data.hh  id_range_event.hh  memory_block.cc  memory_block.hh  roach_packet.cc  roach_packet.hh  time_data.cc  time_data.hh  trigger_flag.cc  trigger_flag.hh
source/linkage/: CMakeLists.txt  fast_packet_acq.cc  fast_packet_acq.hh  fast_packet_acq_manager.cc  fast_packet_acq_manager.hh  fpa_factory.cc  fpa_factory.hh  iterator_timer.cc  iterator_timer.hh  packet_buffer.cc  packet_buffer.hh  packet_distributor.cc  packet_distributor.hh  packet_eater.cc  packet_eater.hh  packet_eater_manager.cc  packet_eater_manager.hh  udp_server.cc  udp_server.hh  udp_server_buffered.cc  udp_server_buffered.hh  udp_server_fpa.cc  udp_server_fpa.hh  udp_server_socket.cc  udp_server_socket.hh
source/test/: CMakeLists.txt  README.md  test_event_builder.cc  test_fast_packet_acq.cc  test_monarch3_write.cc  test_tf_roach_monitor.cc  test_tf_roach_receiver.cc  test_tpacket_v3.cc  test_udp_receiver.cc  test_udp_server.cc
source/test/client/: README.md  roach_simulator.go
source/test/client/roach_simulator/: Dockerfile  roach_simulator.go
source/utility/: CMakeLists.txt  README.md  byte_swap.hh  configurator.cc  global_config.cc  global_config.hh  locked_resource.hh  message_relayer.cc  message_relayer.hh  packet_eater.cc  packet_eater.hh  parser.cc  parser.hh  psyllid_constants.hh  psyllid_error.cc  psyllid_error.hh  signal_handler.cc  signal_handler.hh  slack_relayer.cc  slack_relayer.hh  udp_server.cc  udp_server.hh
test/: CMakeLists.txt  test_event_builder.cc  test_monarch3_write.cc  test_server.cc  test_udp_receiver.cc  test_udp_server.cc
test/client/: roach_simulator.go  (+1 more)
testing/: docker-compose.yaml  str_1ch_dataprod.yaml
utility/: CMakeLists.txt  configurator.hh  connection.cc  connection.hh  locked_resource.hh  psyllid_constants.hh  psyllid_error.cc  psyllid_error.hh  psyllid_version.cc.in  psyllid_version.hh  psyllidmsg.cc  psyllidmsg.hh  server.cc  server.hh  signal_handler.cc  signal_handler.hh  udp_server.cc  udp_server.hh
